--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -24,7 +24,12 @@ FlipNormalMapGreenChannel=False
 [FProjectLauncher]
 AdvancedMode=False
 
-[/Script/Engine.Engine]
-bEnableOnScreenDebugMessages=False
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
 
